--- a/static/css/app.css
+++ b/static/css/app.css
@@ -14124,6 +14124,10 @@ h4 {
   z-index: inherit;
 }
 
+.bc-toast {
+  z-index: 9999;
+}
+
 #flash-messages {
   position: absolute;
   bottom: 0;
